fix(website): dark mode toggle icon size
set the size of the dark-mode-toggle icons to 24px to fit the size of
the other icons

--- a/website/templates/index/shell.css
+++ b/website/templates/index/shell.css
@@ -90,6 +90,10 @@ h2 {
   height: 24px;
 }
 
+dark-mode-toggle {
+  --dark-mode-toggle-icon-size: 24px;
+}
+
 .call-to-action {
   padding: 0.8rem 34px;
   font-weight: 600;
